# adaptive-diagnostic-platform

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: LibEvent.cmake  WiringPiLib.cmake
doc/: Dockerfile.armhf  commit-msg
src/: CMakeLists.txt  main.cpp
